--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
   ],
   "parser": "babel-eslint",
   "env": {
-    "browser": true
+    "browser": true,
+    "node": true
   },
   "rules": {
     "react/prop-types": "off",
