use quote-prop as needed

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,10 @@
     "comma-dangle": [
       "error",
       "always-multiline"
+    ],
+    "quote-props": [
+      "error",
+      "as-needed"
     ]
   }
 }
